Refactoring: Cleanup ; Added H2 properties